--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ strong {
   </div>
 
   <div style="margin-top:8px; display:flex; justify-content:center;">
-    <button class="btn reject" onclick="goToStart()">Volver</button>
+    <button class=".stats-btn" onclick="goToStart()">Volver</button>
   </div>
 </div>
 
@@ -1221,6 +1221,7 @@ window.addEventListener('DOMContentLoaded', initGame);
   
 </body>
 </html>
+
 
 
 
